--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -24,6 +24,7 @@ cursor:
 font:
   normal:
     family: BlexMono Nerd Font
+    size: 10
 
 key_bindings:
   - { key: Return, mods: Shift, action: SpawnNewInstance }
